--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <img src="assets/logo.jpg" alt="Logo" id="logo">
     </header>
     <main><br><br><br>
-        <h1>Hi Im Faromodesign! <br>Im Motion Graphic Designer<br>  </h1><br>
+        <h1>Hi I'm Faromodesign! <br>I'm a Motion Graphic Designer<br>  </h1><br>
         <h4>Scroll down to see my work!</h4>
         <section class="projects">
             <div class="project">
