--- a/about.html
+++ b/about.html
@@ -1,36 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>About - Faromodesign</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css" />
     <!-- icon -->
-    <link rel="icon" href="assets/logo.jpg" type="jpg">
-    
-</head>
-<body>
+    <link rel="icon" href="assets/logo.jpg" type="jpg" />
+  </head>
+  <body>
     <header>
-        <nav>
-            <ul class="nav-links">
-                <li><a href="index.html">Projects</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="https://www.instagram.com/faromodesign/">Contact</a></li>
-            </ul>
-        </nav>
-        <img src="assets/logo.jpg" alt="Logo" id="logo">
+      <div class="A-div">
+        <a href="index.html" class="ITSELF">Projects</a>
+        <a href="about.html" class="ITSELF">About</a>
+        <a href="https://www.instagram.com/faromodesign/" class="ITSELF"
+          >Contact</a
+        >
+      </div>
+      <div class="LOGO">
+        <img src="assets/logo2.png" alt="Logo" class="logo" />
+      </div>
     </header>
     <main>
-        <section class="about">
-            <h1>✨2d Graphic designer✨</h1>
-            <h2>👾Logo design and animation👾</h2>
-            <h2>🔥Flyer design🔥</h2>
-            <h2>💫Motion graphics💫</h2>
-            <h2>📸 Photography 📸</h2>
-        </section>
+      <section class="about">
+        <H2>2D Graphic Designer | Logo Design & Animation <br>
+            🎨 Flyer Design & Branding <br>
+            💫 Motion Graphics & Visual Effects <br>
+            📸 Photography & Creative Direction</H2>
+      </section>
     </main>
     <footer>
-        <p style="color: aliceblue;">&copy; 2025 Farouk Draoui</p>
+      <p style="color: aliceblue" class="fotter-p">&copy; 2025 Farouk Draoui</p>
     </footer>
-</body>
+  </body>
 </html>
