--- a/about.html
+++ b/about.html
@@ -3,25 +3,56 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>About - Faromodesign</title>
-    <link rel="stylesheet" href="styles.css" />
-    <!-- icon -->
-    <link rel="icon" href="assets/logo.jpg" type="jpg" />
+    <title>Faromodesign</title>
+    <link rel="stylesheet" href="styles/styles.css" />
+    <link rel="stylesheet" href="styles/hamburger.css" />
+
+    <link rel="icon" type="image/jpg" href="assets/logo2.png" />
+	    <meta name="description" content="Motion &amp; Graphic Designer | UIX Designer
+
+Hi, My Name is Farouk Draoui, I am a Graphic, Motion Designer, &amp; UI/UX Designer, with more than 6 years of experience, I helped businesses connect and communicate with the audience, delivering greater brand engagement through motion design. my goal is to produce share-worthy content that makes people feel happier or smarter, My most significant points of strength are teamwork, working under pressure, always thinking out of the box, timing, and quality.
+
+Skills:
+Adobe After effects, Adobe Photoshop, Adobe Illustrator, Adobe XD, blender, cinema4d, Figma 
+">
+<meta property="og:description" content="Motion &amp; Graphic Designer | UIX Designer
+
+Hi, My Name is Farouk Draoui, I am a Graphic, Motion Designer, &amp; UI/UX Designer, with more than 6 years of experience, I helped businesses connect and communicate with the audience, delivering greater brand engagement through motion design. my goal is to produce share-worthy content that makes people feel happier or smarter, My most significant points of strength are teamwork, working under pressure, always thinking out of the box, timing, and quality.
+
+
+Skills:
+Adobe After effects, Adobe Photoshop, Adobe Illustrator, Adobe XD, blender, cinema4d, Figma 
+">
   </head>
   <body>
-    <header>
-      <div class="A-div">
-        <a href="index.html" class="ITSELF">Projects</a>
-        <a href="about.html" class="ITSELF">About</a>
-        <a href="https://www.instagram.com/faromodesign/" class="ITSELF"
-          >Contact</a
-        >
+    <main>
+      <div class="header">
+        <label class="hamburger-menu">
+          <input type="checkbox" />
+        </label>
+        <aside class="sidebar">
+          <nav>
+            <div class="A-div">
+              <a href="index.html" class="ITSELF">Projects</a>
+              <a href="about.html" class="ITSELF">About</a>
+              <a href="https://www.instagram.com/faromodesign/" class="ITSELF"
+                >Contact</a
+              >
+            </div>
+          </nav>
+        </aside>
+        <div class="A-div2">
+            <a href="index.html" class="ITSELF">Projects</a>
+            <a href="about.html" class="ITSELF">About</a>
+            <a href="https://www.instagram.com/faromodesign/" class="ITSELF"
+              >Contact</a
+            >
+          </div>
       </div>
       <div class="LOGO">
         <img src="assets/logo2.png" alt="Logo" class="logo" />
       </div>
-    </header>
-    <main>
+      <div class="bg-of-header"></div>
       <section class="about">
         <H2>2D Graphic Designer | Logo Design & Animation <br>
             🎨 Flyer Design & Branding <br>
