--- a/index.html
+++ b/index.html
@@ -1,56 +1,90 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Faromodesign</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles/styles.css" />
+    <link rel="stylesheet" href="styles/hamburger.css" />
 
-    <link rel="icon" type="image/jpg" href="assets/logo2.png">
-</head>
-<body >
-    <header>
-        <div class="A-div">
+    <link rel="icon" type="image/jpg" href="assets/logo2.png" />
+    <meta name="description" content="Motion &amp; Graphic Designer | UIX Designer
+
+Hi, My Name is Farouk Draoui, I am a Graphic, Motion Designer, &amp; UI/UX Designer, with more than 6 years of experience, I helped businesses connect and communicate with the audience, delivering greater brand engagement through motion design. my goal is to produce share-worthy content that makes people feel happier or smarter, My most significant points of strength are teamwork, working under pressure, always thinking out of the box, timing, and quality.
+
+Skills:
+Adobe After effects, Adobe Photoshop, Adobe Illustrator, Adobe XD, blender, cinema4d, Figma 
+">
+<meta property="og:description" content="Motion &amp; Graphic Designer | UIX Designer
+
+Hi, My Name is Farouk Draoui, I am a Graphic, Motion Designer, &amp; UI/UX Designer, with more than 6 years of experience, I helped businesses connect and communicate with the audience, delivering greater brand engagement through motion design. my goal is to produce share-worthy content that makes people feel happier or smarter, My most significant points of strength are teamwork, working under pressure, always thinking out of the box, timing, and quality.
+
+
+Skills:
+Adobe After effects, Adobe Photoshop, Adobe Illustrator, Adobe XD, blender, cinema4d, Figma 
+">
+  </head>
+  <body>
+    <main>
+      <div class="header">
+        <label class="hamburger-menu">
+          <input type="checkbox" />
+        </label>
+        <aside class="sidebar">
+          <nav>
+            <div class="A-div">
+              <a href="index.html" class="ITSELF">Projects</a>
+              <a href="about.html" class="ITSELF">About</a>
+              <a href="https://www.instagram.com/faromodesign/" class="ITSELF"
+                >Contact</a
+              >
+            </div>
+          </nav>
+        </aside>
+        <div class="A-div2">
             <a href="index.html" class="ITSELF">Projects</a>
             <a href="about.html" class="ITSELF">About</a>
-            <a href="https://www.instagram.com/faromodesign/" class="ITSELF">Contact</a>
+            <a href="https://www.instagram.com/faromodesign/" class="ITSELF"
+              >Contact</a
+            >
+          </div>
+      </div>
+      <div class="LOGO">
+        <img src="assets/logo2.png" alt="Logo" class="logo" />
+      </div>
+      <div class="bg-of-header"></div>
+      <div class="TEXT">
+        <h1>
+        Hi, I'm Faromodesign <br />I'm a Motion Graphic Designer
+      </h1>
+      <h4>Scroll down to see my work!</h4>
+      </div>
+
+
+      <section class="projects">
+        <div class="project">
+          <img src="assets/images/project1.jpg" alt="Project 1" />
         </div>
-        <div class="LOGO">
-                   <img src="assets/logo2.png" alt="Logo" class="logo"> 
+        <div class="project">
+          <img src="assets/images/project2.jpg" alt="Project 2" />
+        </div>
+        <div class="project">
+          <img src="assets/images/project3.jpg" alt="Project 3" />
+        </div>
+        <div class="project">
+          <img src="assets/images/project4.jpg" alt="Project 4" />
         </div>
 
-    </header>
-    <main>
-        <h1 class="TEXT">Hi I'm Faromodesign! <br>I'm  a Motion Graphic Designer</h1>
-        <h4>Scroll down to see my work!</h4>
-        <section class="projects">
-            <div class="project">
-                <img src="assets/images/project1.jpg" alt="Project 1">
-            </div>
-            <div class="project">
-                 <img src="assets/images/project2.jpg" alt="Project 2">
-            </div>
-            <div class="project">
-                 <img src="assets/images/project3.jpg" alt="Project 3">
-            </div>
-            <div class="project">
-                 <img src="assets/images/project4.jpg" alt="Project 4">
-            </div>
+        <div class="project">
+          <img src="assets/images/project11.jpg" alt="Project 11" />
+        </div>
 
-            <div class="project">
-                 <img src="assets/images/project11.jpg" alt="Project 11">
-            </div>
-
-            <div class="project">
-                 <img src="assets/images/project44.jpg" alt="Project 44">
-            </div>
-
-       </section>
-
+        <div class="project">
+          <img src="assets/images/project44.jpg" alt="Project 44" />
+        </div>
+      </section>
     </main>
-    <footer>
-        <p style="color: aliceblue;" class="fotter-p">&copy; 2025 Farouk Draoui</p>
-    </footer>
+
     <script src="js/scripts.js"></script>
-</body>
+  </body>
 </html>
