--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <title>Faromodesign</title>
     <link rel="stylesheet" href="styles/styles.css" />
     <link rel="stylesheet" href="styles/hamburger.css" />
-
+    <link rel="stylesheet" href="styles/animations.css">
     <link rel="icon" type="image/jpg" href="assets/logo2.png" />
+    <link rel="stylesheet" href="styles/discription.css">
     <meta name="description" content="Motion &amp; Graphic Designer | UIX Designer
 
 Hi, My Name is Farouk Draoui, I am a Graphic, Motion Designer, &amp; UI/UX Designer, with more than 6 years of experience, I helped businesses connect and communicate with the audience, delivering greater brand engagement through motion design. my goal is to produce share-worthy content that makes people feel happier or smarter, My most significant points of strength are teamwork, working under pressure, always thinking out of the box, timing, and quality.
@@ -61,28 +62,56 @@ Adobe After effects, Adobe Photoshop, Adobe Illustrator, Adobe XD, blender, cine
       </div>
 
 
+
       <section class="projects">
-        <div class="project">
+        <div class="project" type="checkbox" >
           <img src="assets/images/project1.jpg" alt="Project 1" />
+          <div class="discription">
+            <p>A sleek design highlighting the Mustang GT with bold typography, layered car views, and a modern, powerful aesthetic.</p>
+          </div>
         </div>
         <div class="project">
           <img src="assets/images/project2.jpg" alt="Project 2" />
+          <div class="discription">
+            <p>Bold typography with "ASTON MARTIN" in large, modern letters.
+              A sleek DB11 is showcased with a smoky, high-contrast background.
+              Yellow and black accents add a sporty, graphic-driven aesthetic.</p>
+          </div>
         </div>
         <div class="project">
           <img src="assets/images/project3.jpg" alt="Project 3" />
+          <div class="discription">
+            <p>A bold Porsche design featuring the GT3 RS, with striking typography, a dynamic car shot, and a sleek, performance-driven vibe.</p>
+          </div>
         </div>
         <div class="project">
           <img src="assets/images/project4.jpg" alt="Project 4" />
+          <div class="discription">
+            <p>Bold digital artwork featuring Stephen Curry in an energetic, layered composition.
+              Golden State Warriors' colors, bridge elements, and typography emphasize his legacy.
+              A mix of action shots, signatures, and textures creates a dynamic, modern sports design.</p>
+          </div>
         </div>
 
         <div class="project">
           <img src="assets/images/project11.jpg" alt="Project 11" />
+          <div class="discription">
+            <p>A striking black-and-white design showcasing a Subaru WRX STI with bold text, Japanese elements, and a sleek urban vibe.</p>
+          </div>
         </div>
 
         <div class="project">
           <img src="assets/images/project44.jpg" alt="Project 44" />
+          <div class="discription">
+            <p>Bold digital artwork featuring miami heat in an energetic, layered composition.
+              Golden State Warriors' colors, bridge elements, and typography emphasize his legacy.
+              A mix of action shots, signatures, and textures creates a dynamic, modern sports design.</p>
+          </div>
         </div>
       </section>
+      <div class="loading">
+        <img src="assets/logo2.png" class="logo-loading" />
+        <span class="loading-text">loading</span></div>
     </main>
 
     <script src="js/scripts.js"></script>
